--- a/meta/main.yml
+++ b/meta/main.yml
@@ -52,7 +52,9 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
+dependencies:
+  - { role: apigee-opdk-setting-private-address }
+  - { role: apigee-opdk-settings-management-server }
 
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
