Config updates for meta and infrastructure.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,14 +10,14 @@
 - name: Normalized name for ldap ip if on dc-1
   set_fact:
     cacheable: yes
-    opdk_ldap_ip: "{{ hostvars[groups['dc-1-ms'][0]]['private_address'] }}"
-  when: groups['dc-1'] is defined and groups['dc-1-ms'] is defined and groups['dc-1-ldap'] is not defined and inventory_hostname in groups['dc-1'] and hostvars[groups['dc-1-ms'][0]][interface_name].ipv4.address is defined
+    opdk_ldap_ip: "{{ hostvars[groups['dc_1_ms'][0]]['private_address'] }}"
+  when: groups['dc-1'] is defined and groups['dc_1_ms'] is defined and groups['dc_1_ldap'] is not defined and inventory_hostname in groups['dc-1'] and hostvars[groups['dc_1_ms'][0]][interface_name].ipv4.address is defined
 
 - block:
   - name: Normalized name for ldap ip when ldap is a declared if on dc-1
     set_fact:
       cacheable: yes
-      opdk_ldap_ip: "{{ hostvars[groups['dc-1-ldap'][0]]['private_address'] }}"
+      opdk_ldap_ip: "{{ hostvars[groups['dc_1_ldap'][0]]['private_address'] }}"
       opdk_ldap_sid: '1'
 
   - name: Set ldap remote flag
@@ -30,21 +30,21 @@
     set_fact:
       cacheable: yes
       opdk_ldap_type: '2'
-    when: groups['dc-2-ldap'] is defined
+    when: groups['dc_2_ldap'] is defined
 
-  when: groups['dc-1'] is defined and groups['dc-1-ldap'] is defined and inventory_hostname in groups['dc-1'] and hostvars[groups['dc-1-ms'][0]]['private_address'] is defined
+  when: groups['dc-1'] is defined and groups['dc_1_ldap'] is defined and inventory_hostname in groups['dc-1'] and hostvars[groups['dc_1_ms'][0]]['private_address'] is defined
 
 - name: Normalized name for ldap ip if on dc-2
   set_fact:
     cacheable: yes
-    opdk_ldap_ip: "{{ hostvars[groups['dc-2-ms'][0]]['private_address'] }}"
-  when: groups['dc-2'] is defined and groups['dc-2-ms'] is defined and groups['dc-2-ldap'] is not defined and inventory_hostname in groups['dc-2'] and hostvars[groups['dc-2-ms'][0]]['private_address'] is defined
+    opdk_ldap_ip: "{{ hostvars[groups['dc_2_ms'][0]]['private_address'] }}"
+  when: groups['dc-2'] is defined and groups['dc_2_ms'] is defined and groups['dc_2_ldap'] is not defined and inventory_hostname in groups['dc-2'] and hostvars[groups['dc_2_ms'][0]]['private_address'] is defined
 
 - block:
   - name: Normalized name for ldap ip is declared if on dc-2
     set_fact:
       cacheable: yes
-      opdk_ldap_ip: "{{ hostvars[groups['dc-2-ldap'][0]]['private_address'] }}"
+      opdk_ldap_ip: "{{ hostvars[groups['dc_2_ldap'][0]]['private_address'] }}"
       opdk_ldap_sid: '2'
 
   - name: Set ldap remote flag
@@ -57,9 +57,9 @@
     set_fact:
       cacheable: yes
       opdk_ldap_type: '2'
-    when: groups['dc-1-ldap'] is defined
+    when: groups['dc_1_ldap'] is defined
 
-  when: groups['dc-2'] is defined and groups['dc-2-ldap'] is defined and inventory_hostname in groups['dc-2'] and hostvars[groups['dc-1-ms'][0]]['private_address'] is defined
+  when: groups['dc-2'] is defined and groups['dc_2_ldap'] is defined and inventory_hostname in groups['dc-2'] and hostvars[groups['dc_1_ms'][0]]['private_address'] is defined
 
 - name: Normalized name for management server local ip to dc-1 if current node is not on dc-1 or dc-2
   set_fact:
