--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,14 +7,14 @@
     opdk_ldap_port: '{{ opdk_ldap_port }}'
     use_opdk_ldap_remote_host: '{{ use_opdk_ldap_remote_host }}'
 
-- name: Normalized name for ldap ip if on dc-1
+- name: Normalized name for ldap ip if on dc_1
   set_fact:
     cacheable: yes
     opdk_ldap_ip: "{{ hostvars[groups['dc_1_ms'][0]]['private_address'] }}"
-  when: groups['dc-1'] is defined and groups['dc_1_ms'] is defined and groups['dc_1_ldap'] is not defined and inventory_hostname in groups['dc-1'] and hostvars[groups['dc_1_ms'][0]][interface_name].ipv4.address is defined
+  when: groups['dc_1'] is defined and groups['dc_1_ms'] is defined and groups['dc_1_ldap'] is not defined and inventory_hostname in groups['dc_1'] and hostvars[groups['dc_1_ms'][0]][interface_name].ipv4.address is defined
 
 - block:
-  - name: Normalized name for ldap ip when ldap is a declared if on dc-1
+  - name: Normalized name for ldap ip when ldap is a declared if on dc_1
     set_fact:
       cacheable: yes
       opdk_ldap_ip: "{{ hostvars[groups['dc_1_ldap'][0]]['private_address'] }}"
@@ -32,16 +32,16 @@
       opdk_ldap_type: '2'
     when: groups['dc_2_ldap'] is defined
 
-  when: groups['dc-1'] is defined and groups['dc_1_ldap'] is defined and inventory_hostname in groups['dc-1'] and hostvars[groups['dc_1_ms'][0]]['private_address'] is defined
+  when: groups['dc_1'] is defined and groups['dc_1_ldap'] is defined and inventory_hostname in groups['dc_1'] and hostvars[groups['dc_1_ms'][0]]['private_address'] is defined
 
-- name: Normalized name for ldap ip if on dc-2
+- name: Normalized name for ldap ip if on dc_2
   set_fact:
     cacheable: yes
     opdk_ldap_ip: "{{ hostvars[groups['dc_2_ms'][0]]['private_address'] }}"
-  when: groups['dc-2'] is defined and groups['dc_2_ms'] is defined and groups['dc_2_ldap'] is not defined and inventory_hostname in groups['dc-2'] and hostvars[groups['dc_2_ms'][0]]['private_address'] is defined
+  when: groups['dc_2'] is defined and groups['dc_2_ms'] is defined and groups['dc_2_ldap'] is not defined and inventory_hostname in groups['dc_2'] and hostvars[groups['dc_2_ms'][0]]['private_address'] is defined
 
 - block:
-  - name: Normalized name for ldap ip is declared if on dc-2
+  - name: Normalized name for ldap ip is declared if on dc_2
     set_fact:
       cacheable: yes
       opdk_ldap_ip: "{{ hostvars[groups['dc_2_ldap'][0]]['private_address'] }}"
@@ -59,9 +59,9 @@
       opdk_ldap_type: '2'
     when: groups['dc_1_ldap'] is defined
 
-  when: groups['dc-2'] is defined and groups['dc_2_ldap'] is defined and inventory_hostname in groups['dc-2'] and hostvars[groups['dc_1_ms'][0]]['private_address'] is defined
+  when: groups['dc_2'] is defined and groups['dc_2_ldap'] is defined and inventory_hostname in groups['dc_2'] and hostvars[groups['dc_1_ms'][0]]['private_address'] is defined
 
-- name: Normalized name for management server local ip to dc-1 if current node is not on dc-1 or dc-2
+- name: Normalized name for management server local ip to dc_1 if current node is not on dc_1 or dc_2
   set_fact:
     cacheable: yes
     opdk_ldap_ip: "{{ local_mgmt_ip }}"
