--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,69 +1,47 @@
 ---
 # tasks file for apigee-opdk-settings-ldap
-- name: Normalized ldap attributes
+- name: Set LDAP defaults to single region with LDAP installed with management server
   set_fact:
     cacheable: yes
     opdk_ldap_type: '1'
     opdk_ldap_port: '{{ opdk_ldap_port }}'
-    use_opdk_ldap_remote_host: '{{ use_opdk_ldap_remote_host }}'
-
-- name: Normalized name for ldap ip if on dc_1
-  set_fact:
-    cacheable: yes
-    opdk_ldap_ip: "{{ hostvars[groups['dc_1_ms'][0]]['private_address'] }}"
-  when: groups['dc_1'] is defined and groups['dc_1_ms'] is defined and groups['dc_1_ldap'] is not defined and inventory_hostname in groups['dc_1'] and hostvars[groups['dc_1_ms'][0]][interface_name].ipv4.address is defined
-
-- block:
-  - name: Normalized name for ldap ip when ldap is a declared if on dc_1
-    set_fact:
-      cacheable: yes
-      opdk_ldap_ip: "{{ hostvars[groups['dc_1_ldap'][0]]['private_address'] }}"
-      opdk_ldap_sid: '1'
-
-  - name: Set ldap remote flag
-    set_fact:
-      cacheable: yes
-      use_opdk_ldap_remote_host: 'y'
-    when: opdk_ldap_ip != local_mgmt_ip
-
-  - name: Set ldap type
-    set_fact:
-      cacheable: yes
-      opdk_ldap_type: '2'
-    when: groups['dc_2_ldap'] is defined
-
-  when: groups['dc_1'] is defined and groups['dc_1_ldap'] is defined and inventory_hostname in groups['dc_1'] and hostvars[groups['dc_1_ms'][0]]['private_address'] is defined
-
-- name: Normalized name for ldap ip if on dc_2
-  set_fact:
-    cacheable: yes
-    opdk_ldap_ip: "{{ hostvars[groups['dc_2_ms'][0]]['private_address'] }}"
-  when: groups['dc_2'] is defined and groups['dc_2_ms'] is defined and groups['dc_2_ldap'] is not defined and inventory_hostname in groups['dc_2'] and hostvars[groups['dc_2_ms'][0]]['private_address'] is defined
-
-- block:
-  - name: Normalized name for ldap ip is declared if on dc_2
-    set_fact:
-      cacheable: yes
-      opdk_ldap_ip: "{{ hostvars[groups['dc_2_ldap'][0]]['private_address'] }}"
-      opdk_ldap_sid: '2'
-
-  - name: Set ldap remote flag
-    set_fact:
-      cacheable: yes
-      use_opdk_ldap_remote_host: 'y'
-    when: opdk_ldap_ip != local_mgmt_ip
-
-  - name: Set ldap type
-    set_fact:
-      cacheable: yes
-      opdk_ldap_type: '2'
-    when: groups['dc_1_ldap'] is defined
-
-  when: groups['dc_2'] is defined and groups['dc_2_ldap'] is defined and inventory_hostname in groups['dc_2'] and hostvars[groups['dc_1_ms'][0]]['private_address'] is defined
-
-- name: Normalized name for management server local ip to dc_1 if current node is not on dc_1 or dc_2
-  set_fact:
-    cacheable: yes
     opdk_ldap_ip: "{{ local_mgmt_ip }}"
-  when: opdk_ldap_ip is not defined or opdk_ldap_ip | trim | length == 0
+    use_opdk_ldap_remote_host: '{{ use_opdk_ldap_remote_host | default("n") }}'
 
+- name: Set LDAP IP to dc_1_ldap if it is defined
+  set_fact:
+    cacheable: yes
+    opdk_ldap_ip: "{{ hostvars[groups['dc_1_ldap'][0]]['private_address'] }}"
+  when: groups['dc_1'] is defined and groups['dc_1_ldap'] is defined and inventory_hostname in groups['dc_1']
+
+- name: Set LDAP IP to dc_2_ldap if it is defined
+  set_fact:
+    cacheable: yes
+    opdk_ldap_ip: "{{ hostvars[groups['dc_2_ldap'][0]]['private_address'] }}"
+  when: groups['dc_2'] is defined and groups['dc_2_ldap'] is defined and inventory_hostname in groups['dc_2']
+
+- name: Set LDAP type to replication if either dc_2_ldap or dc_2_ms is defined
+  set_fact:
+    cacheable: yes
+    opdk_ldap_type: '2'
+  when: groups['dc_2_ldap'] is defined or groups['dc_2_ms'] is defined
+
+- name: Set LDAP remote flag if LDAP will not be installed with the management server
+  set_fact:
+    cacheable: yes
+    use_opdk_ldap_remote_host: 'y'
+  when: opdk_ldap_ip != local_mgmt_ip and opdk_ldap_type == 1
+
+- name: Set the LDAP Peer IP and SID in dc_1 if replication is necessary
+  set_fact:
+    cacheable: yes
+    opdk_ldap_sid: '1'
+    opdk_ldap_peer: "{{ hostvars[groups['dc_2_ldap'][0]]['private_address'] }}"
+  when: region == 'dc_1' and opdk_ldap_type == '2' and groups['dc_2_ldap'] is defined and inventory_hostname in groups['dc_1']
+
+- name: Set the LDAP Peer IP and SID in dc_2 if replication is necessary
+  set_fact:
+    cacheable: yes
+    opdk_ldap_sid: '2'
+    opdk_ldap_peer: "{{ hostvars[groups['dc_1_ldap'][0]]['private_address'] }}"
+  when: region == 'dc_2' and opdk_ldap_type == '2' and groups['dc_1_ldap'] is defined and inventory_hostname in groups['dc_2']
